--- a/Modulo 3/ex02 - imagem de fundo/style.css
+++ b/Modulo 3/ex02 - imagem de fundo/style.css
@@ -17,9 +17,9 @@
 }
 
 body {
+    background-repeat: repeat;
     background-image: url(imagens/wallpaper004.jpg);
-    background-repeat: no-repeat;
-
+    background-size: cover;
 }
 
 header {
@@ -57,12 +57,12 @@ article h1 {
     padding: 5px;
     color: white;
     font: bolder 2em 'Arial';
-    margin-top: 15px;
+    margin-top: 7px;
     border-radius: 4px;
 }
 
 article p {
-    margin-top: 8px;
+    margin-top: 5px;
     font: var(--fontetexto);
     text-align: justify;
     line-height: 1.3em;
@@ -70,6 +70,7 @@ article p {
     padding: 5px;
     text-indent: 30px;
     border-radius: 2px;
+    margin-bottom: 15px;
 }
 
 article ul {
@@ -95,4 +96,30 @@ ul {
 img {
     display: block;
     margin: auto;
+}
+
+p.outro {
+    margin-bottom: 0px;
+}
+
+div.quadrado {
+    width: 300px;
+    height: 300px;
+    border-radius: 5px;
+    border: 1px solid black;
+    display: inline-block;
+    margin-top: 50px;
+}
+
+
+#X {
+    background-color: aqua;
+}
+
+#X2 {
+    background-image: linear-gradient(45deg, orange, yellow);
+}
+
+#X3 {
+    background-image: url(imagens/teste.jpg);
 }
