--- a/Modulo 3/ex02 - imagem de fundo/style.css
+++ b/Modulo 3/ex02 - imagem de fundo/style.css
@@ -6,7 +6,7 @@
     --corbackground: #2C858D;
     --corbackground2: #74CEB7;
     --bodybackground: #FFFFCB;
-    --corfundotext: #C9FFD5;
+    --corfundotext: #cce9ee;
     --corextra: #004056;
     --fontetexto: normal 1em 'arial';
 }
@@ -53,24 +53,26 @@ main {
 }
 
 article h1 {
-    background-image: linear-gradient(90deg, var(--corbackground), white);
+    background-image: linear-gradient(90deg, var(--corbackground), #6bc2ca);
     padding: 5px;
     color: white;
     font: bolder 2em 'Arial';
-    margin-top: 7px;
-    border-radius: 4px;
+    border-radius: 2px 2px 0px 0px;
+}
+
+h1.pos {
+    margin-top: 20px;
 }
 
 article p {
-    margin-top: 5px;
     font: var(--fontetexto);
     text-align: justify;
     line-height: 1.3em;
     background-color: var(--corfundotext);
     padding: 5px;
     text-indent: 30px;
-    border-radius: 2px;
-    margin-bottom: 15px;
+    border-radius: 0px 0px 2px 2px;
+    margin-bottom: 20px;
 }
 
 article ul {
@@ -81,7 +83,7 @@ article ul {
     padding-left: 20px;
     line-height: 1.5em;
     padding-bottom: 10px;
-    margin-bottom: 4px;
+
     columns: 2;
 }  
 
@@ -103,23 +105,72 @@ p.outro {
 }
 
 div.quadrado {
-    width: 300px;
-    height: 300px;
+    height: 275px;
     border-radius: 5px;
     border: 1px solid black;
-    display: inline-block;
-    margin-top: 50px;
+    margin: 15px;
+    max-width: 860px;
+    min-width: 400px;
 }
 
 
 #X {
-    background-color: aqua;
+    background-image: url(imagens/wallpaper003.png.jpg);
+    background-position: top left;
 }
 
 #X2 {
-    background-image: linear-gradient(45deg, orange, yellow);
+    background-image: url(imagens/wallpaper003.png.jpg);
+    background-position: center left;
 }
 
 #X3 {
+    background-image: url(imagens/wallpaper003.png.jpg);
+    background-position: bottom left;
+}
+
+div.seupai {
+    display: inline-block;
+    width: 250px;
+    height: 250px;
+    margin: 15px;
+    border: 1px solid black;
+}
+
+div.fundo {
+    background-color: var(--corfundotext);
+    padding: 10px;
+}
+
+#Y1 {
+    background-color: rgb(46, 45, 43);
+}
+
+#Y2 {
+    background-image: linear-gradient(45deg, purple, black);
+}
+
+#Y3 {
     background-image: url(imagens/teste.jpg);
+    background-position: center center;
+    background-size: cover;
+}
+
+footer {
+    background-color: black;
+    max-width: 2560px;
+    min-width: 400px;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin-top: 30px;
+}
+
+div.linha {
+    border: 1px solid #758f8f;
+    background-color: #758f8f;
+    margin-top: 30px;
+    max-width: 2560px;
+    min-width: 400px;
+    display: block;
 }
