--- a/Modulo 3/ex02 - imagem de fundo/style.css
+++ b/Modulo 3/ex02 - imagem de fundo/style.css
@@ -60,6 +60,10 @@ article h1 {
     border-radius: 2px 2px 0px 0px;
 }
 
+article p::after {
+    content: '.';
+}
+
 h1.pos {
     margin-top: 20px;
 }
@@ -189,4 +193,35 @@ article ol {
 li:hover {
     font-size: 1.3em;
     background-color: #758f8f;
+}
+
+div.position {
+    max-width: 800px;
+    min-width: 300px;
+    height: 600px;
+    background-image: url(imagens/target001.png);
+    background-size: 100% 100%;
+    margin-top: 30px;
+    background-color: rgb(192, 172, 136);
+    position: relative;
+    padding: 10px;
+}
+
+div.inside {
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    background-color: rgb(255, 255, 0);
+    background-image: url(imagens/target001.png);
+    background-size: 100% 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+h1.ex {
+    font: bold 3em 'Bebas Neue', 'cursive';
+    letter-spacing: 2px;
+    color: #000000;
+    text-align: center;
 }
