--- a/Modulo 3/ex03/style.css
+++ b/Modulo 3/ex03/style.css
@@ -49,6 +49,7 @@ main h1 {
     padding: 5px;
     font: var(--fontemain);
     border-radius: 5px 5px 0px 0px;
+    color: white;
     background-image: linear-gradient(90deg, #5EABDB, #C4E9FF);
 }
 
