--- a/Modulo 3/des02/style.css
+++ b/Modulo 3/des02/style.css
@@ -86,6 +86,7 @@ section.imagem > p {
     display: inline-block;
     padding-left: 10px;
     padding-right: 5px;
+    text-shadow: 1px 1px 0px black;
 
 }
 
@@ -94,15 +95,15 @@ section#dois {
     background-size: cover;
     max-width: 2560px;
     min-width: 400px;
-    box-shadow: inset 2px 2px 8px 1px rgba(0, 0, 0, 0.473);
+    box-shadow: inset 4px 4px 8px 2px rgba(0, 0, 0, 0.473);
 }
 
 section#um {
-    background: black url(imagens/background001.jpg) top left no-repeat fixed;
+    background: black url(imagens/background001.jpg) right center no-repeat fixed;
     background-size: cover;
     max-width: 2560px;
     min-width: 400px;
-    box-shadow: inset 2px 2px 8px 1px rgba(0, 0, 0, 0.473);
+    box-shadow: inset 4px 4px 8px 2px rgba(0, 0, 0, 0.473);
 }
 
 section.normal {
