--- a/Modulo 3/ex04/style.css
+++ b/Modulo 3/ex04/style.css
@@ -1,3 +1,129 @@
 * {
     margin: 0px;
 }
+
+:root {
+    --corbackground: #2C858D;
+    --corbackground2: #74CEB7;
+    --bodybackground: #FFFFCB;
+    --corfundotext: #cce9ee;
+    --corextra: #004056;
+    --fontetexto: normal 1em 'arial';
+}
+
+
+@font-face {
+    font-family: 'padrao';
+    src: url('../BebasNeue-Regular.ttf') format('truetype');
+}
+
+body {
+    background-image: url(../wallpaper004.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat
+}
+
+header h1 {
+    font: normal 4em 'padrao';
+    letter-spacing: 2px;
+    line-height: 1.3em;
+    color: white;
+}
+
+header {
+    text-align: center;
+    background-image: linear-gradient(360deg, #2C858D, #74CEB7);
+    padding: 20px;
+    max-width: 2560px;
+    min-width: 370px;
+}
+
+header p {
+    font: normal 1em 'arial';
+    color: white;
+}
+
+main {
+    max-width: 800px;
+    min-width: 370px;
+    background-color: white;
+    margin: auto;
+    padding: 20px;
+    border-radius: 0px 0px 7px 7px;
+    box-shadow: 0px 4px 3px rgba(163, 159, 159, 0.356);
+}
+
+main h1 {
+    background-image: linear-gradient(90deg, #67bbca, #004056 );
+    padding: 3px;
+    color: black;
+    border-radius: 4px 4px 0px 0px;
+    font: normal 23px 'arial';
+    padding-left: 10px;
+    margin-top: 20px;
+}
+
+main p {
+    background-color: #cce9ee;
+    padding: 3px;
+    text-align: justify;
+    text-indent: 30px;
+    font: normal 1em 'arial';
+    border-radius: 0px 0px 4px 4px;
+}
+
+h1.first {
+    margin: 0px;
+}
+
+p.lista {
+    border-radius: 0px;
+}
+
+ul {
+    background-color: #cce9ee;
+    list-style-type: '\2714';
+    font: normal 1em 'arial';
+    columns: 2;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 0px 0px 4px 4px;
+}
+
+ li:hover {
+    font-size: 1.1em;
+    background-color: #7bacb4;
+    padding: 1px;
+}
+
+li::before {
+    content: '.';
+}
+
+li {
+    padding-top: 5px;
+}
+
+table {
+    margin-top: 200px;
+    background-color: white;
+    font-family: 'arial';
+    border: 1px solid black;
+    width: 400px;
+    border-collapse: collapse;
+}
+
+
+table td {
+    border: 1px solid black;
+}
+
+td.seupai {
+    background-color: yellow;
+}
+
+tr.seucu {
+    background-color: rgb(173, 147, 112);
+}
