--- a/Modulo 4/ex01/style.css
+++ b/Modulo 4/ex01/style.css
@@ -48,6 +48,7 @@ main {
     padding: 15px;
     border-radius: 0px 0px 5px 5px;
     box-shadow: 0px 2px 2px rgba(167, 167, 167, 0.582);
+    margin: auto;
 }
 
 article > h1 { 
