--- a/Modulo 4/ex02/style.css
+++ b/Modulo 4/ex02/style.css
@@ -69,6 +69,7 @@ section > p {
     padding: 12px;
     padding-bottom: 5px;
     background-color: white;
+    padding-bottom: 20px;
 }
 
 section#um {
@@ -111,3 +112,7 @@ section#sete {
     flex: 30%;
 }
 
+
+section#oito {
+    flex: 56%;
+}
