--- a/Modulo 4/ex02/style.css
+++ b/Modulo 4/ex02/style.css
@@ -66,10 +66,10 @@ section > p {
     flex-direction: row;
     flex-wrap: wrap;
     column-gap: 5px;
-    padding: 12px;
+    padding: 8px;
     padding-bottom: 5px;
-    background-color: white;
-    padding-bottom: 20px;
+    background-color: rgb(247, 247, 247);
+    padding-bottom: 8px;
 }
 
 section#um {
@@ -122,5 +122,5 @@ section#oito {
 }
 
 #dez {
-    flex: 10%;
+    flex: 40%;
 }
